# coin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CoinConfig-version.cmake.in  CoinConfig.cmake  coin_pack.cmake  coin_utils.cmake
data.co/commons/: header.co
data.co/sensor/: image.co  point_cloud.co
doc/: communicator.md  package.md
env/: build.sh  run.sh  setup.sh  start-env.sh
env/coin-ubuntu-20.04/: Dockerfile
package/: setup.bash  setup.zsh
samples/: CMakeLists.txt
samples/comm/: CMakeLists.txt  client.cpp  data_def.hpp  publisher.cpp  reader.cpp  service.cpp  subscriber.cpp  writer.cpp
samples/local/: CMakeLists.txt  client.cpp  data_def.hpp  publisher.cpp  reader.cpp  service.cpp  subscriber.cpp  writer.cpp
samples/utils/: CMakeLists.txt  mut_sub.cpp  redirect.cpp
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
src/coin-code/: CMakeLists.txt  README.md
src/coin-code/src/: coin-code.co.hpp
src/coin-code/src/code_backend/: cpp_backend.cpp  cpp_backend.hpp
src/coin-code/src/code_scan/: code_decoder.cpp  code_decoder.hpp
src/coin-code/src/code_scan/config/: code_exception.hpp  code_tree.config.cpp  code_tree.config.hpp
src/coin-code/src/code_scan/grammar/: base.cpp  base.hpp  communicator.cpp  communicator.hpp  field.cpp  field.hpp  frame.cpp  frame.hpp  mate_object.cpp  mate_object.hpp
src/coin-code/src/code_scan/type_tree/: type.cpp  type.hpp  type_tree.cpp  type_tree.hpp
src/coin-code/src/code_tree/: code_tree.cpp  code_tree.hpp
src/coin-commons/: CMakeLists.txt
src/coin-commons/executor/: executor.cpp  executor.hpp
src/coin-commons/ipcs/: shm.cpp  shm.hpp
src/coin-commons/parmeter/: anydata.hpp
src/coin-commons/parmeter/impl/anydata/: anydata_adapter.hpp  anydata_adapter_toml.hpp  anydata_impl.hpp
src/coin-commons/test/: CMakeLists.txt
src/coin-commons/test/executor/: executor.cpp
src/coin-commons/utils/: crc32.cpp  crc32.hpp  datetime.cpp  datetime.hpp  event.cpp  event.hpp  file_lock.cpp  file_lock.hpp  ret.hpp  strings.cpp  strings.hpp  type.cpp  type.hpp  utils.cpp  utils.hpp
src/coin-data/: CMakeLists.txt  README.md
src/coin-data/src/: CMakeLists.txt
src/coin-data/src/coin-data/: coin-data.cpp  coin-data.hpp  communicator.cpp  communicator.hpp  communicator_type.hpp
src/coin-data/src/coin-data/local/: data.hpp  local_channal.cpp  local_channal.hpp
src/coin-data/src/coin-data/local/impl/: allocator.cpp  allocator.hpp  buddy.cpp  buddy.hpp  ipcs.cpp  ipcs.hpp  obj_allocator.hpp  shm_memory.cpp  shm_memory.hpp  shm_shared_ptr.hpp  shm_types.cpp  shm_types.hpp  shmobj_manager.cpp  shmobj_manager.hpp
src/coin-node/: CMakeLists.txt  package.cpp  package.hpp  readme.md  system.cpp  system.hpp
src/coin-viz/: CMakeLists.txt  cube_viz_item.cpp  cube_viz_item.hpp  line_viz_item.cpp  line_viz_item.hpp  native_window.cpp  native_window.hpp  pointcloud_viz_item.cpp  pointcloud_viz_item.hpp  rect_viz_item.cpp  rect_viz_item.hpp  viz-filament.hpp  viz_item.cpp  viz_item.hpp  viz_widget.cpp  viz_widget.hpp
src/commc/: CMakeLists.txt  co-scan.cpp  commc.cpp  commc.hpp
src/control_panel/: control_panel.cpp  control_panel.hpp
src/focuse_panel/: focuse_panel.cpp  focuse_panel.hpp
src/node_manager/: display_widget.cpp  display_widget.hpp  node_item.cpp  node_item.hpp  node_item_base.cpp  node_item_base.hpp  node_item_display_widget.cpp  node_item_display_widget.hpp  node_manager.cpp  node_manager.hpp
src/super_panel/: command_processor.cpp  command_processor.hpp  super_panel.cpp  super_panel.hpp
src/widgets/: build_button.cpp  build_button.hpp  delete_button.cpp  delete_button.hpp  drawer_widget.cpp  drawer_widget.hpp  edit_button.cpp  edit_button.hpp  env_editor.cpp  env_editor.hpp  float_widget.cpp  float_widget.hpp  image_viewer.cpp  image_viewer.hpp  tag_widget.cpp  tag_widget.hpp  terminal_widget.cpp  terminal_widget.hpp
src/workshop/: coin_embedded_widget.cpp  coin_embedded_widget.hpp  coin_graphics_scene.cpp  coin_graphics_scene.hpp  coin_node_datamodel.cpp  coin_node_datamodel.hpp  coin_node_painter.cpp  coin_node_painter.hpp  dataflow_graphmodel.cpp  dataflow_graphmodel.hpp  workshop_widget.cpp  workshop_widget.hpp
test/: CMakeLists.txt  header.coin.protocol
test/communicator/: CMakeLists.txt  communicator.cpp
test/html/: CMakeLists.txt  html.cpp
tools/: kit  package  set_env
