cmake_minimum_required(VERSION 3.16)
PROJECT(coin VERSION 1.0.0)

# 开启 C++17支持
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS ON)

INCLUDE_DIRECTORIES(
    ${PCL_INCLUDE_DIRS}
)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/coin-commons)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/coin-data)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/coin-viz)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/coin-code)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/coin-node)
ADD_SUBDIRECTORY(commc)

FILE(GLOB_RECURSE COIN_COMMONS_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/coin-commons/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/coin-commons/*.h")
TARGET_SOURCES(coin-commons
    PUBLIC FILE_SET HEADERS FILES "${COIN_COMMONS_HEADER_FILES}"
)

FILE(GLOB_RECURSE COIN_NODE_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/coin-node/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/coin-node/*.h")
TARGET_SOURCES(coin-node
    PUBLIC FILE_SET HEADERS FILES "${COIN_NODE_HEADER_FILES}"
)

FILE(GLOB_RECURSE COIN_VIZ_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/coin-viz/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/coin-viz/*.h")
TARGET_SOURCES(coin-viz
    PUBLIC FILE_SET HEADERS FILES "${COIN_VIZ_HEADER_FILES}"
)

# 收集源文件
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}                      SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/node_manager         SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/widgets              SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/workshop             SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/super_panel          SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/control_panel        SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/focuse_panel        SRCS)


# 设置产物
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC 
    ${CMAKE_SOURCE_DIR}/src
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    Qt5::Core
    Qt5::Widgets
    QtNodes
    qtermwidget5
    pthread
    util
    magic

# sub module
    coin-commons
    coin-code
    coin-data
    coin-viz
    coin-node
    resources
)
