cmake_minimum_required(VERSION 3.16)
PROJECT(coin-node VERSION 1.0.0)

# 开启 C++17支持
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS ON)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}     SRCS)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    coin-commons
)
